--- a/edgeserver-cloud.properties
+++ b/edgeserver-cloud.properties
@@ -1,2 +1,2 @@
 zuul.routes.Product.path=/product/**
-zuul.routes.Recommedation.path=/recommedation/**
+zuul.routes.Recommedation.path=/recommedation/
